--- a/frontend/src/components/DaysPatternInput.css
+++ b/frontend/src/components/DaysPatternInput.css
@@ -2,6 +2,11 @@
   margin-bottom: 1rem;
 }
 
+.days-pattern-input .required-asterisk {
+  color: var(--error-color);
+  margin-left: 2px;
+}
+
 .days-pattern-input .frequency-preset-select {
   width: 100%;
   padding: 0.5rem;
